# haxr-annotator

./: .gitmodules  index.html
core/: CMakeLists.txt  CMakeUserPresets.json  CMakeUserPresets.json.EXAMPLE
core/core/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.EXAMPLE
core/core/cmake/: install-rules.cmake  variables.cmake
core/core/include/core/: core.hpp
core/core/source/: core.cpp  wasm_entry.cpp
core/core/test/: CMakeLists.txt
core/core/test/source/: core_test.cpp
